--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   <link 
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" 
       rel="stylesheet">
+      <style>
+        [x-cloak] {
+          display: none !important;
+        }
+      </style>
 </head>
 
 <body>
@@ -19,7 +24,7 @@
       <div class="py-8">
         <h1 class="text-4xl font-bold">Tailwind CSS + Alpine JS Sample using Webpack</h1>
         <p class="mt-2 text-lg text-gray-600">
-          An opinionated form reset designed to make form elements easy to style with utility
+          An opinionated form designed to make form elements easy to style with utility
           classes.
         </p>
       </div>
@@ -155,7 +160,7 @@
       <div x-show.transition="status || isError" 
         style="background-color: rgb(0,0,0, .5)"
         class="mx-auto absolute top-0 left-0 w-full h-full flex items-center 
-            shadow-lg overflow-y-auto">
+            shadow-lg overflow-y-auto" x-cloak>
           <div class="container mx-auto rounded p-4 mt-2 overflow-y-auto">
               <div class="bg-white rounded px-8 py-8 max-w-lg mx-auto">
                   <h1 
@@ -170,7 +175,7 @@
                           class="mt-3 text-lg font-semibold bg-gray-800 w-full 
                             text-white rounded-lg px-6 py-3 block shadow-xl 
                             hover:text-white hover:bg-black">
-                          Close Modal
+                          OK
                       </button>
                   </div>
               </div>
@@ -199,41 +204,41 @@
               return re.test(email);
           },
           submitData() {
-            // Ensures all fields have data before submitting
-            if (!this.formData.email.length || 
-                !this.formData.password.length || 
-                !this.formData.password_confirm.length) {
-                alert("Please fill out all required field and try again!")
-                return;
+              // Ensures all fields have data before submitting
+              if (!this.formData.email.length || 
+                  !this.formData.password.length || 
+                  !this.formData.password_confirm.length) {
+                  alert("Please fill out all required field and try again!")
+                  return;
+              }
+              this.buttonLabel = 'Submitting...'
+              this.loading = true;
+              fetch('https://reqres.in/api/users', {
+                  method: 'POST',
+                  headers: {
+                      'Content-Type': 'application/json'
+                  },
+                  body: JSON.stringify(this.formData)
+              })
+              .then((response) => {
+                  if(response.status === 201) {
+                      this.modalHeaderText = "Congratulations!!!"
+                      this.modalBodyText = "You have been successfully registered!";
+                      this.status = true;
+                  } else{
+                      throw new Error ("Your registration failed");
+                  }
+              })
+              .catch((error) => {
+                  this.modalHeaderText = "Ooops Error!"
+                  this.modalBodyText = error.message;
+                  this.isError = true;
+              })
+              .finally(() => {
+                  this.loading = false;
+                  this.buttonLabel = 'Submit'
+              })
           }
-            this.buttonLabel = 'Submitting...'
-            this.loading = true;
-            fetch('https://reqres.in/api/users', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(this.formData)
-                })
-                .then((response) => {
-                    if(response.status === 201) {
-                        this.modalHeaderText = "Congratulations!!!"
-                        this.modalBodyText = "You have been successfully registered!";
-                        this.status = true;
-                    } else{
-                        throw new Error ("Your registration failed");
-                    }
-                })
-                .catch((error) => {
-                    this.modalHeaderText = "Ooops Error!"
-                    this.modalBodyText = error.message;
-                    this.isError = true;
-                })
-                .finally(() => {
-                    this.loading = false;
-                    this.buttonLabel = 'Submit'
-                })
-        }
       }
   }
 </script>
